# figma-make-to-png-to-text

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  compose.yaml  package-lock.json  package.json
apps/ai-worker/: Dockerfile  package.json  pyproject.toml
apps/ai-worker/src/ai_worker/: antigravity_client.py  code_lookup.py  db.py  evidence.py  jobs.py  main.py  migrate.py  process_next_job.py  redaction.py  schema.py
apps/ai-worker/tests/: conftest.py  test_code_lookup.py  test_job_lease_fencing.py  test_process_next_job.py  test_redaction.py  test_schema_validation.py  test_smoke_antigravity.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/worker/: Dockerfile  build.mjs  package.json
docs/adr/: 0001-isolate-source-project-execution.md  0002-resumable-analysis-runs.md  0003-single-user-local-deployment.md  0004-detect-and-override-project-startup.md  0005-scroll-before-full-page-capture.md  0006-user-provided-authentication-state.md  (+14 more)
tests/: ai-export-policy-api.test.mjs  analysis-runs-api.test.mjs  compose-contract.test.mjs  compose-persistence.test.mjs  control-plane-page.test.mjs  exploration-auth-init.test.ts  exploration-budget.test.ts  exploration-deduplicator.test.ts  exploration-interaction-guard.test.ts  exploration-network-guard.test.ts  job-lease-fencing.test.mjs  run-tests.mjs  source-fingerprint.test.ts  source-project-paths.test.ts  source-projects-api.test.mjs  source-revision-copy.test.ts  startup-contract-detection.test.ts  worker-source-revision.test.mjs  workflow-drafts-api.test.mjs
(+34 files in other folders)
