[project]
name = "ai-worker"
version = "0.1.0"
description = "Antigravity-SDK-backed worker that turns confirmed candidate screens into workflow drafts"
requires-python = "==3.13.*"
dependencies = [
  "google-antigravity",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "jsonschema>=4.23",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_worker"]
